--- a/docbuild/api/Scrapbook101core.Program.yml
+++ b/docbuild/api/Scrapbook101core.Program.yml
@@ -17,8 +17,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Program.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Program
     path: ../Scrapbook101core/Program.cs
     startLine: 22
@@ -61,8 +61,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Program.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Main
     path: ../Scrapbook101core/Program.cs
     startLine: 28
@@ -102,8 +102,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Program.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateWebHostBuilder
     path: ../Scrapbook101core/Program.cs
     startLine: 39
@@ -119,7 +119,7 @@ items:
       type: System.String[]
       description: An optional array of arguments to pass to the builder.
     return:
-      type: Microsoft.AspNetCore.Hosting.IWebHostBuilder
+      type: IWebHostBuilder
       description: ''
     content.vb: Public Shared Function CreateWebHostBuilder(args As String()) As IWebHostBuilder
   overload: Scrapbook101core.Program.CreateWebHostBuilder*
@@ -466,16 +466,9 @@ references:
   name: CreateWebHostBuilder
   nameWithType: Program.CreateWebHostBuilder
   fullName: Scrapbook101core.Program.CreateWebHostBuilder
-- uid: Microsoft.AspNetCore.Hosting.IWebHostBuilder
-  commentId: T:Microsoft.AspNetCore.Hosting.IWebHostBuilder
-  parent: Microsoft.AspNetCore.Hosting
+- uid: IWebHostBuilder
+  commentId: '!:IWebHostBuilder'
   isExternal: true
   name: IWebHostBuilder
   nameWithType: IWebHostBuilder
-  fullName: Microsoft.AspNetCore.Hosting.IWebHostBuilder
-- uid: Microsoft.AspNetCore.Hosting
-  commentId: N:Microsoft.AspNetCore.Hosting
-  isExternal: true
-  name: Microsoft.AspNetCore.Hosting
-  nameWithType: Microsoft.AspNetCore.Hosting
-  fullName: Microsoft.AspNetCore.Hosting
+  fullName: IWebHostBuilder
