--- a/docbuild/api/Scrapbook101core.DocumentDBRepository-1.yml
+++ b/docbuild/api/Scrapbook101core.DocumentDBRepository-1.yml
@@ -22,8 +22,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DocumentDBRepository
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 45
@@ -74,8 +74,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 52
@@ -113,8 +113,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetItemsAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 72
@@ -153,8 +153,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CreateItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 89
@@ -167,7 +167,7 @@ items:
     - id: item
       type: '{T}'
     return:
-      type: System.Threading.Tasks.Task{Document}
+      type: System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
     content.vb: Public Shared Function CreateItemAsync(item As T) As Task(Of Document)
   overload: Scrapbook101core.DocumentDBRepository`1.CreateItemAsync*
   nameWithType.vb: DocumentDBRepository(Of T).CreateItemAsync(T)
@@ -192,8 +192,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: UpdateItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 94
@@ -208,7 +208,7 @@ items:
     - id: item
       type: '{T}'
     return:
-      type: System.Threading.Tasks.Task{Document}
+      type: System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
     content.vb: Public Shared Function UpdateItemAsync(id As String, item As T) As Task(Of Document)
   overload: Scrapbook101core.DocumentDBRepository`1.UpdateItemAsync*
   nameWithType.vb: DocumentDBRepository(Of T).UpdateItemAsync(String, T)
@@ -233,8 +233,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DeleteItemAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 99
@@ -272,8 +272,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Initialize
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 104
@@ -306,8 +306,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/DocumentDBRepository.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GetCategoryListDocumentAsync
     path: ../Scrapbook101core/DocumentDBRepository.cs
     startLine: 212
@@ -930,15 +930,15 @@ references:
   name: T
   nameWithType: T
   fullName: T
-- uid: System.Threading.Tasks.Task{Document}
-  commentId: T:System.Threading.Tasks.Task{Document}
+- uid: System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
+  commentId: T:System.Threading.Tasks.Task{Microsoft.Azure.Documents.Document}
   parent: System.Threading.Tasks
   definition: System.Threading.Tasks.Task`1
   name: Task<Document>
   nameWithType: Task<Document>
-  fullName: System.Threading.Tasks.Task<Document>
+  fullName: System.Threading.Tasks.Task<Microsoft.Azure.Documents.Document>
   nameWithType.vb: Task(Of Document)
-  fullName.vb: System.Threading.Tasks.Task(Of Document)
+  fullName.vb: System.Threading.Tasks.Task(Of Microsoft.Azure.Documents.Document)
   name.vb: Task(Of Document)
   spec.csharp:
   - uid: System.Threading.Tasks.Task`1
@@ -949,10 +949,10 @@ references:
   - name: <
     nameWithType: <
     fullName: <
-  - uid: Document
+  - uid: Microsoft.Azure.Documents.Document
     name: Document
     nameWithType: Document
-    fullName: Document
+    fullName: Microsoft.Azure.Documents.Document
     isExternal: true
   - name: '>'
     nameWithType: '>'
@@ -966,10 +966,10 @@ references:
   - name: '(Of '
     nameWithType: '(Of '
     fullName: '(Of '
-  - uid: Document
+  - uid: Microsoft.Azure.Documents.Document
     name: Document
     nameWithType: Document
-    fullName: Document
+    fullName: Microsoft.Azure.Documents.Document
     isExternal: true
   - name: )
     nameWithType: )
