--- a/docbuild/api/Scrapbook101core.Models.Item.yml
+++ b/docbuild/api/Scrapbook101core.Models.Item.yml
@@ -29,8 +29,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Item
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 15
@@ -73,8 +73,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Assets
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 20
@@ -110,8 +110,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: AssetPath
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 33
@@ -148,8 +148,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Category
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 40
@@ -158,27 +158,13 @@ items:
   namespace: Scrapbook101core.Models
   example: []
   syntax:
-    content: >-
-      [Required(ErrorMessage = "Category is required.")]
-
-      public string Category { get; set; }
+    content: public string Category { get; set; }
     parameters: []
     return:
       type: System.String
       description: "\nOne of the category values described in the <xref href=\"Scrapbook101core.Models.Category\" data-throw-if-not-resolved=\"false\"></xref> class.\nA Scrapbook101core item must be assigned to a category.\n"
-    content.vb: >-
-      <Required(ErrorMessage:="Category is required.")>
-
-      Public Property Category As String
+    content.vb: Public Property Category As String
   overload: Scrapbook101core.Models.Item.Category*
-  attributes:
-  - type: System.ComponentModel.DataAnnotations.RequiredAttribute
-    ctor: System.ComponentModel.DataAnnotations.RequiredAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: ErrorMessage
-      type: System.String
-      value: Category is required.
   modifiers.csharp:
   - public
   - get
@@ -199,8 +185,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: CategoryFields
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 49
@@ -236,8 +222,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DateAdded
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 56
@@ -273,8 +259,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: DateUpdated
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 67
@@ -311,8 +297,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Description
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 77
@@ -349,8 +335,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: GeoLocation
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 88
@@ -363,7 +349,7 @@ items:
     content: public Point GeoLocation { get; set; }
     parameters: []
     return:
-      type: Point
+      type: Microsoft.Azure.Documents.Spatial.Point
       description: "\nRepresents a point geometry class in the Azure Cosmos DB service.\n"
     content.vb: Public Property GeoLocation As Point
   overload: Scrapbook101core.Models.Item.GeoLocation*
@@ -387,8 +373,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Id
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 94
@@ -424,8 +410,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Location
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 104
@@ -462,8 +448,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Rating
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 114
@@ -500,8 +486,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: UpdatedBy
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 124
@@ -538,8 +524,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Title
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 130
@@ -548,27 +534,13 @@ items:
   namespace: Scrapbook101core.Models
   example: []
   syntax:
-    content: >-
-      [Required(ErrorMessage = "Title is required.")]
-
-      public string Title { get; set; }
+    content: public string Title { get; set; }
     parameters: []
     return:
       type: System.String
       description: "\nA descriptive title for the Scrapbook101core item. For example, if item is a book, use all or part of the book title.\n"
-    content.vb: >-
-      <Required(ErrorMessage:="Title is required.")>
-
-      Public Property Title As String
+    content.vb: Public Property Title As String
   overload: Scrapbook101core.Models.Item.Title*
-  attributes:
-  - type: System.ComponentModel.DataAnnotations.RequiredAttribute
-    ctor: System.ComponentModel.DataAnnotations.RequiredAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: ErrorMessage
-      type: System.String
-      value: Title is required.
   modifiers.csharp:
   - public
   - get
@@ -589,8 +561,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Models/Item.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Type
     path: ../Scrapbook101core/Models/Item.cs
     startLine: 141
@@ -601,26 +573,12 @@ items:
   remarks: "\nThe value of the an item type is read from the appsettings.json file. For example, &quot;scrapbook101Item&quot;. The\ntype distinguished the item from other Document DB entries like category.\n"
   example: []
   syntax:
-    content: >-
-      [Required(ErrorMessage = "Type is required.")]
-
-      public string Type { get; set; }
+    content: public string Type { get; set; }
     parameters: []
     return:
       type: System.String
-    content.vb: >-
-      <Required(ErrorMessage:="Type is required.")>
-
-      Public Property Type As String
+    content.vb: Public Property Type As String
   overload: Scrapbook101core.Models.Item.Type*
-  attributes:
-  - type: System.ComponentModel.DataAnnotations.RequiredAttribute
-    ctor: System.ComponentModel.DataAnnotations.RequiredAttribute.#ctor
-    arguments: []
-    namedArguments:
-    - name: ErrorMessage
-      type: System.String
-      value: Type is required.
   modifiers.csharp:
   - public
   - get
@@ -1077,12 +1035,19 @@ references:
   name: GeoLocation
   nameWithType: Item.GeoLocation
   fullName: Scrapbook101core.Models.Item.GeoLocation
-- uid: Point
-  commentId: '!:Point'
+- uid: Microsoft.Azure.Documents.Spatial.Point
+  commentId: T:Microsoft.Azure.Documents.Spatial.Point
+  parent: Microsoft.Azure.Documents.Spatial
   isExternal: true
   name: Point
   nameWithType: Point
-  fullName: Point
+  fullName: Microsoft.Azure.Documents.Spatial.Point
+- uid: Microsoft.Azure.Documents.Spatial
+  commentId: N:Microsoft.Azure.Documents.Spatial
+  isExternal: true
+  name: Microsoft.Azure.Documents.Spatial
+  nameWithType: Microsoft.Azure.Documents.Spatial
+  fullName: Microsoft.Azure.Documents.Spatial
 - uid: Scrapbook101core.Models.Item.Id*
   commentId: Overload:Scrapbook101core.Models.Item.Id
   name: Id
